# lxqt-config

./: CMakeLists.txt
lxqt-config-kbd-backlight/: CMakeLists.txt  backlightsettings.cpp  backlightsettings.h  backlightsettings.ui  main.cpp
lxqt-config-kbd-backlight/resources/: lxqt-config-kbd-backlight.desktop.in
